Fix footer padding on mobile.

--- a/frontend/static/resources/css/style.scss
+++ b/frontend/static/resources/css/style.scss
@@ -200,7 +200,8 @@ article.page {
 
 footer {
 	margin: 0px;
-	padding: 40px;
+	padding-top: 40px;
+	padding-bottom: 40px;
 	color: #dedede;
 
 	ul {
